# SatSim

./: .gitignore  CMakeLists.txt  README.md  base_definitions.cpp  base_definitions.h  dockenviroment.cpp  dockenviroment.h  dockenviroment.ui  dockmissions.cpp  dockmissions.h  dockmissions.ui  dockresources.cpp  dockresources.h  dockresources.ui  earth_view.cpp  earth_view.h  earth_view.ui  earthview.cpp  earthview.h  earthview.ui  electromagnetics.cpp  electromagnetics.h  embedded.qrc  event.cpp  event.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  perturbations.cpp  perturbations.h  player.cpp  player.h  res.qrc  scene1.json  sceneSchema.json  sceneloader.cpp  sceneloader.h  scenemanager.cpp  scenemanager.h  simcore.cpp  (+20 more)
